--- a/CameraApp/app/src/main/res/drawable/switch_camera.xml
+++ b/CameraApp/app/src/main/res/drawable/switch_camera.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:tint="@color/selector_ic"
     android:width="24dp"
     android:height="24dp"
     android:viewportWidth="46.0"
